having internal independent db and change api to support such
